--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Brew!</title>
+  <link href="main.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+  <div id="breweries"></div>
   <script src="main.js"></script>
 </body>
 
